# PrivateMeguminBot

./: .gitignore  .pre-commit-config.yaml  __main__.py  copypastas.json  main.py  pyproject.toml  schema.prisma
cogs/: memes.py
core/: __init__.py  checks.py  client.py  custom_logger.py  database.py  db.py  embedbuilder.py  logutil.py
extensions/: copypasta.py  memes.py
extensions/cnuy/: __init__.py  cnuy.py  last_id  last_id.toml
extensions/copypasta/: __init__.py  copypasta.py  utils.py
extensions/copypasta/config/: __init__.py  base.copypasta.toml  custom.copypasta.toml  settings.py
extensions/funny/: __init__.py  funny.py
extensions/sexboard/: __init__.py  sexboard.py
necoarc/: __init__.py  __main__.py  checks.py  client.py  config.py  const.py  database.py  db.py  log.py
utils/: __init__.py  checks.py  client.py  database.py  embedbuilder.py
v1/: main.py
v1/core/: __init__.py
v1/extensions/cnuy/: __init__.py  cnuy.py
v1/extensions/copypasta/: copypasta.py
v1/extensions/copypasta/config/: custom.copypasta.toml
v1/extensions/funny/: funny.py
v1/extensions/sexboard/: sexboard.py
