[tool.poetry]
name = "megumin-bot"
version = "0.1.0"
description = ""
authors = ["glitchy <thepatheticweebgamer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
naff = { extras = ["all"], version = "^1.8.1" }
pygelbooru = "^0.5.0"
NHentai-API = "^0.0.19"
asyncpraw = "^7.5.0"
pet-pet-gif = "^1.0.2"
python-dotenv = "^0.20.0"
loguru = "^0.6.0"
prisma = "^0.6.6"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
jurigged = "^0.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
